# dsr-files

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
src/dsr_files/: __init__.py  csv_handler.py  enums.py  excel_handler.py  joblib_handler.py  json_handler.py  parquet_handler.py  pdf_handler.py  utils.py  yaml_handler.py
src/dsr_files/resources/: params.yaml
tests/: README.md  conftest.py  test_csv_handler.py  test_enum.py  test_excel_handler.py  test_joblib_conversion_handlers.py  test_joblib_handler.py  test_json_handler.py  test_parquet_handler.py  test_pdf_handler.py  test_utils.py  test_yaml_handler.py
